# python-web

./: README.md  main.py  pyproject.toml
team selector/: team selector.html
